test/conformance/chainsaw/flags/standard/emit-events/resource-fail.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: bar
  labels:
    foo: bar
