test/conformance/chainsaw/flags/standard/emit-events/resource.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: foo
  labels:
    team: kyverno
