test/conformance/chainsaw/flags/standard/emit-events/admission-controller-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno-admission-controller
  namespace: kyverno
status:
  readyReplicas: 1
  updatedReplicas: 1
