test/conformance/chainsaw/flags/standard/emit-events/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: require-labels
status:
  conditions:
    - reason: Succeeded
      status: "True"
      type: Ready
