test/conformance/chainsaw/flags/standard/emit-events/01-admission-controller-apply.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: admission-controller-apply
spec:
  timeouts: {}
  try:
  - apply:
      file: admission-controller.yaml
  - assert:
      file: admission-controller-assert.yaml
