test/conformance/chainsaw/flags/standard/emit-events/03-resource.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resource
spec:
  timeouts: {}
  try:
  - apply:
      file: resource.yaml
  - apply:
      check:
        (error != null): true
      file: resource-fail.yaml
