test/conformance/chainsaw/flags/standard/emit-events/04-event.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: event
spec:
  timeouts: {}
  try:
  - apply:
      file: event-assert.yaml
