test/conformance/chainsaw/flags/standard/emit-events/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: emit-events
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: admission-controller.yaml
    - assert:
        file: admission-controller-assert.yaml
  - name: step-02
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
  - name: step-03
    try:
    - apply:
        file: resource.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: resource-fail.yaml
  - name: step-04
    try:
    - apply:
        file: event-assert.yaml
  - name: step-05
    try:
    - script:
        content: kubectl logs deployment/kyverno-admission-controller -n kyverno
        check:
          # This check ensures that the string 'reason="PolicyViolation"' is found
          # in stdout or else fails
          (contains($stdout, 'reason=\"PolicyViolation\"')): true
